<resources>
    <string name="app_name">Photo Editor</string>
    <string name="main_fragment_label">Photo Editor</string>
    <string name="feature_fragment_label">Feature fragment</string>
    <string name="tv_load_image">Upload an image from your gallery</string>
    <string name="crop_fragment_label">Crop Image</string>
    <string name="light_fragment_label">Adjust Light</string>
    <string name="color_fragment_label">Adjust Color</string>
    <string name="filter_fragment_label">Add Filter</string>
    <string name="btn_load">LOAD</string>
    <string name="btn_crop">CROP</string>
    <string name="btn_light">LIGHT</string>
    <string name="btn_color">COLOR</string>
    <string name="btn_filters">FILTERS</string>
    <string name="todo">TODO</string>
    <string name="tv_crop">crop</string>
    <string name="image_load_error">Failure trying to load image from gallery</string>
    <string name="image_empty_message">You must select a photo first!</string>
    <string name="image_save_success">Image was saved successfully!</string>
    <string name="image_save_error">There was a problem to save the image</string>
    <string name="permission_granted_message">Permission is Granted</string>
    <string name="permission_request_message">You must accept requested permissions</string>
    <string name="choose_share_option_message">Choose option to share</string>
    <string name="btn_save">Save</string>
    <string name="btn_share">Share</string>
    <string name="btn_rotate">Rotate</string>
    <string name="tv_brightness">Brightness: %1$d</string>
    <string name="tv_contrast">Contrast: %1$d</string>
    <string name="tv_saturation">Saturation: %1$d</string>
</resources>