<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionLoad"
        android:icon="@drawable/ic_upload"
        android:title="@string/btn_load"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionRotate"
        android:icon="@drawable/ic_rotate"
        android:title="@string/btn_rotate"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionSave"
        android:icon="@drawable/ic_save"
        android:title="@string/btn_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionShare"
        android:icon="@drawable/ic_share"
        android:title="@string/btn_share"
        app:showAsAction="ifRoom" />
</menu>