<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.photoeditor.MainFragment"
        android:label="@string/main_fragment_label">
        <action
            android:id="@+id/action_mainFragment_to_featureFragment"
            app:destination="@id/featureFragment" />
        <action
            android:id="@+id/action_mainFragment_to_cropFragment"
            app:destination="@id/cropFragment" />
        <action
            android:id="@+id/action_mainFragment_to_lightFragment"
            app:destination="@id/lightFragment" />
    </fragment>

    <fragment
        android:id="@+id/featureFragment"
        android:name="com.example.photoeditor.FeatureFragment"
        android:label="@string/feature_fragment_label"
        tools:layout="@layout/fragment_feature">
        <argument
            android:name="feature"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/cropFragment"
        android:name="com.example.photoeditor.CropFragment"
        android:label="@string/crop_fragment_label"
        tools:layout="@layout/fragment_crop">
        <argument
            android:name="image"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/lightFragment"
        android:name="com.example.photoeditor.LightFragment"
        android:label="@string/light_fragment_label"
        tools:layout="@layout/fragment_light">
        <argument
            android:name="image"
            app:argType="string" />
    </fragment>

</navigation>